--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port=8080
 
 # 数据库连接配置
-spring.datasource.url=jdbc:mysql://localhost:3306/english_scenario?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Sq926628
+spring.datasource.url=jdbc:mysql://rm-cn-7js4coo7u00032.rwlb.rds.aliyuncs.com:3306/english_scenario?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=vocab_user
+spring.datasource.password=Lijiahong123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA配置
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -16,7 +16,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # 我们稍后会用更好的方式配置CORS
 
 # 日志级别
-logging.level.com.englishscenario.backend=DEBUG
+logging.level.com.englishscenario.backend=INFO
+logging.level.root=WARN
 
 # DeepSeek API配置
 deepseek.api.key=${DEEPSEEK_API_KEY:sk-ed0162dab1984855a10a14bbd7a6a93c}
@@ -24,3 +25,11 @@ deepseek.api.url=https://api.deepseek.com/v1/chat/completions
 deepseek.api.model=deepseek-chat
 deepseek.api.temperature=0.7
 deepseek.api.max-tokens=2000
+
+# 错误处理 - 生产环境
+server.error.include-message=never
+server.error.include-stacktrace=never
+
+# 启用压缩
+server.compression.enabled=true
+server.compression.mime-types=application/json,text/html,text/css,application/javascript
